[package]
name          = "esp-rom-sys"
version       = "0.1.3"
edition       = "2024"
rust-version  = "1.88.0"
description   = "ROM code support"
documentation = "https://docs.espressif.com/projects/rust/esp-rom-sys/latest/"
keywords      = ["embedded", "esp32", "espressif"]
categories    = ["embedded", "hardware-support", "no-std"]
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

links         = "esp_rom_sys"

[package.metadata.espressif]
forever-unstable = true
check-configs = [{ features = [] }]
clippy-configs = [{ features = [] }]
semver-config = { features = ["__internal_rom_symbols"]}

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["esp32c6"]

[lib]
bench = false
test  = false

[dependencies]
cfg-if              = "1"
document-features   = "0.2"
esp32   = { version = "0.40", features = ["critical-section"], optional = true }
esp32c2 = { version = "0.29", features = ["critical-section"], optional = true }
esp32c3 = { version = "0.32", features = ["critical-section"], optional = true }
esp32c5 = { version = "0.2",  features = ["critical-section"], optional = true }
esp32c6 = { version = "0.23", features = ["critical-section"], optional = true }
esp32c61 = { version = "0.3", features = ["critical-section"], optional = true }
esp32h2 = { version = "0.19", features = ["critical-section"], optional = true }
esp32s2 = { version = "0.31", features = ["critical-section"], optional = true }
esp32s3 = { version = "0.35", features = ["critical-section"], optional = true }

[build-dependencies]
esp-metadata-generated = { version = "0.3.0", path = "../esp-metadata-generated", features = ["build-script"] }

[features]
__internal_rom_symbols = []

#! ### Chip selection
#! One of the following features must be enabled to select the target chip:

##
esp32   = [ "dep:esp32" ]
##
esp32c2 = [ "dep:esp32c2" ]
##
esp32c3 = [ "dep:esp32c3" ]
##
esp32c5 = [ "dep:esp32c5" ]
##
esp32c6 = [ "dep:esp32c6" ]
##
esp32c61 = [ "dep:esp32c61" ]
##
esp32h2 = [ "dep:esp32h2" ]
##
esp32s2 = [ "dep:esp32s2" ]
##
esp32s3 = [ "dep:esp32s3" ]
