[package]
name = "esp-rustls-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = [
    "alloc",
] }
der = "0.7"
ecdsa = "0.16.8"
hmac = "0.12"
p256 = { version = "0.13.2", default-features = false, features = [
    "alloc",
    "ecdsa",
    "pkcs8",
] }
pkcs8 = "0.10.2"
pki-types = { package = "rustls-pki-types", version = "1" }
rand_core = { version = "0.6", default-features = false }

rustls = { version = "0.23.21", default-features = false, features = [
   "logging",
   "tls12",
] }
rsa = { version = "0.9", features = ["sha2"], default-features = false }
sha2 = { version = "0.10", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "0.102", features = [
    "alloc",
], default-features = false }
x25519-dalek = "2"

# should this be a feature? - not really needed by this crate but re-exported for convenience
webpki-roots = "0.26.1"

esp-hal = { path = "../esp-hal", version = "0.23.1", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
log = "0.4.20"
